--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,6 +5,10 @@
   min-height: 0;
 }
 
+#waybar {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 window#waybar {
   background-color: rgba(0, 0, 0, 0.6);
   color: #c4c4c4;
